--- a/backend/static/css/main.css
+++ b/backend/static/css/main.css
@@ -1,16 +1,73 @@
 body {
-    background-color:gray;
+    background-color:white;
+    font-family: 'Dejavu Sans', Arial, Verdana, sans-serif;
 }
 
-.upload-area {
+.center-horizontally {
     margin: auto;
     width: 50%;
-    
+}
+
+.center-inside-elems {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 0, 0, 0.185);
-    width: 300px; /* Set your desired width */
-    height: 200px; /* Set your desired height */
-    border: 2px dashed #ccc; /* Optional: Add a dashed border for visual style */
 }
+
+
+.upload-area {    
+    background-color:#3c4fe05d;
+    width: 650px; /* Set your desired width */
+    height: 200px; /* Set your desired height */
+    border: 3px dashed #8377b9; /* Optional: Add a dashed border for visual style */
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.button-1 {
+    align-items: center;
+    appearance: none;
+    background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+    border: 0;
+    border-radius: 6px;
+    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    /*font-family: "JetBrains Mono",monospace;*/
+    height: 48px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow,transform;
+    font-size: 18px;
+  }
+  
+  .button-1:focus {
+    box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+  }
+  
+  .button-1:hover {
+    box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+    transform: translateY(-2px);
+  }
+  
+  .button-1:active {
+    box-shadow: #3c4fe0 0 3px 7px inset;
+    transform: translateY(2px);
+  }
