Redirect to homepage if no files in session for /results

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -30,7 +30,7 @@
 
 </div>
 <!-- Temporary DB values test: -->
-<ul>
+<ul style="display: none;">
     {% for item in rec %}
     <li>DB Test: {{ item }}</li>
     {% endfor %}
