--- a/backend/static/css/main.css
+++ b/backend/static/css/main.css
@@ -24,6 +24,15 @@ body {
   border: 3px dashed #8377b9; /* Optional: Add a dashed border for visual style */
 }
 
+.converted-files-list {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.converted-files-list li {
+  padding: 6px;
+}
+
 input[type="file"] {
   display: none;
 }
@@ -85,86 +94,29 @@ input[type="submit"] {
   transform: translateY(2px);
 }
 
-.lds-spinner {
-  color: official;
+.loader {
+  width: 32px;
+  height: 32px;
+  margin: auto;
+  vertical-align: middle;
+  border: 5px solid #fff;
+  border-bottom-color: #3c4fe0;
+  border-radius: 50%;
   display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
-.lds-spinner div {
-  transform-origin: 40px 40px;
-  animation: lds-spinner 1.2s linear infinite;
-}
-.lds-spinner div:after {
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 3px;
-  left: 37px;
-  width: 6px;
-  height: 18px;
-  border-radius: 20%;
-  background: #fff;
-}
-.lds-spinner div:nth-child(1) {
-  transform: rotate(0deg);
-  animation-delay: -1.1s;
-}
-.lds-spinner div:nth-child(2) {
-  transform: rotate(30deg);
-  animation-delay: -1s;
-}
-.lds-spinner div:nth-child(3) {
-  transform: rotate(60deg);
-  animation-delay: -0.9s;
-}
-.lds-spinner div:nth-child(4) {
-  transform: rotate(90deg);
-  animation-delay: -0.8s;
-}
-.lds-spinner div:nth-child(5) {
-  transform: rotate(120deg);
-  animation-delay: -0.7s;
-}
-.lds-spinner div:nth-child(6) {
-  transform: rotate(150deg);
-  animation-delay: -0.6s;
-}
-.lds-spinner div:nth-child(7) {
-  transform: rotate(180deg);
-  animation-delay: -0.5s;
-}
-.lds-spinner div:nth-child(8) {
-  transform: rotate(210deg);
-  animation-delay: -0.4s;
-}
-.lds-spinner div:nth-child(9) {
-  transform: rotate(240deg);
-  animation-delay: -0.3s;
-}
-.lds-spinner div:nth-child(10) {
-  transform: rotate(270deg);
-  animation-delay: -0.2s;
-}
-.lds-spinner div:nth-child(11) {
-  transform: rotate(300deg);
-  animation-delay: -0.1s;
-}
-.lds-spinner div:nth-child(12) {
-  transform: rotate(330deg);
-  animation-delay: 0s;
-}
-@keyframes lds-spinner {
+
+@keyframes rotation {
   0% {
-    opacity: 1;
+    transform: rotate(0deg);
   }
   100% {
-    opacity: 0;
+    transform: rotate(360deg);
   }
 }
 
-.sentence-box p{
+.sentence-box p {
   max-width: 350;
   word-break: break-all;
   overflow-wrap: break-word;
@@ -218,4 +170,3 @@ input[type="submit"] {
     opacity: 1;
   }
 }
-
