Transition to text2questions state properly

--- a/backend/static/css/main.css
+++ b/backend/static/css/main.css
@@ -4,6 +4,10 @@ body {
   font-family: "Dejavu Sans", Arial, Verdana, sans-serif;
 }
 
+li p {
+  display: inline;
+}
+
 .center-horizontally {
   margin: auto;
   width: 50%;
