Generate basic Q&A from PDF

--- a/backend/static/css/main.css
+++ b/backend/static/css/main.css
@@ -20,6 +20,11 @@ li p {
   align-items: center;
 }
 
+
+.qa-set {
+  border: 1px solid red;
+}
+
 .upload-area {
   padding: 4px;
   background-color: #3c4fe05d;
