--- a/backend/src/templates/results.html
+++ b/backend/src/templates/results.html
@@ -19,14 +19,18 @@
         <ul class="converted-files-list">
             {% for file in file_names %}
             <li id="{{ file }}">
-                <div class="loader"></div>
+                <div id="{{ file }}" class="loader"></div>
                 <b>{{ file }}</b> - <p id="{{ file }}">Converting to text...</p>
             </li>
             {% endfor %}
         </ul>
     </div>
-    <div class="qa-set">
-        <p>Generated Questions & Answers:</p>
+    <div class="qa-sets">
+        {% for file in file_names %}
+        <div id="{{ file }}" class="qa-set">
+            <p id="{{ file }}" class="qa-set-title"><b>{{ file }}</b> - Processing....</p>
+        </div>
+        {% endfor %}
     </div>
 </div>
 
