--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -7,13 +7,14 @@
     <h1>PDF to Test Questions</h1>
     <h2>Generate questions and answers from a PDF file.</h2>
 </div>
-<div class="upload-area center-horizontally center-inside-elems">
+<div class="upload-area center-horizontally center-inside-elems" ondrop="dropHandler(event);"
+    ondragover="dragOverHandler(event);">
     <div class="center-inside-elems">
         <form method="post" enctype="multipart/form-data">
             <label class="button-1" for="file-upload">
                 <i class="fa fa-cloud-upload"></i> Upload Files
             </label>
-            <input id="file-upload" type="file" name="file" accept="application/pdf" onchange="upload_file()"
+            <input id="file-upload" type="file" name="file" accept="application/pdf" onchange="upload_files()"
                 multiple></input>
         </form>
 
@@ -26,8 +27,6 @@
                 Files</button>
         </div>
     </div>
-
-
 </div>
 <!-- Temporary DB values test: 
 <ul style="display: none;">
