--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}?u={{ last_updated }}" />
+    <script src="{{ url_for('static',filename='js/base.js') }}?u={{ last_updated }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <meta charset="UTF-8">
     <title>PDF2Questions</title>
@@ -10,6 +11,13 @@
 </head>
 
 <body>
+    <nav id="base-navbar">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/results">Scanned PDFs</a></li>
+            <li><a href="/help">Help</a></li>
+        </ul>
+    </nav>
     {% block body %}{% endblock %}
 </body>
 
