Redirect 404 pages to home

--- a/backend/src/templates/results.html
+++ b/backend/src/templates/results.html
@@ -10,8 +10,10 @@
 {% block body %}
 
 <div>
-    <p class="status-text">Converting the following files, please wait...</p>
-
+    <div id="status-div">
+        <button class="button-1-disabled">Export Results</button>
+        <p class="status-text">Converting the following files, please wait...</p>
+    </div>
     <div class="converting-div">
         <ul id="converting-files-list">
         </ul>
