--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -17,6 +17,10 @@
             <li><a href="/results">Scanned PDFs</a></li>
             <li><a href="/help">Help</a></li>
         </ul>
+        <ul>
+            <li><a href="/register">Register</a></li>
+            <li><a href="/login">Login</a></li>
+        </ul>
     </nav>
     {% block body %}{% endblock %}
 </body>
