--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -18,8 +18,7 @@
                 multiple></input>
         </form>
 
-        <!-- <input type=submit value=Upload> -->
-        <p>Max upload limit is 1MB, Sign up for more</p>
+        <p>Max upload limit is 1Mb, <a href="/register">Sign up</a> for more</p>
         <div class="convert-region center-inside-elems">
             <ul>
             </ul>
