Update SEO meta tags

--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -6,7 +6,12 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="{{ url_for('static',filename='js/base.js') }}?u={{ last_updated }}"></script>
     <meta charset="UTF-8">
-    <title>PDF2Questions</title>
+    <meta name="keywords"
+        content="PDF to flashcards, convert PDF to flashcards, Q&A flashcards, PDF files, flashcard generator, study tool, educational flashcards, online flashcard maker">
+    <meta name="description" content="Effortlessly convert PDF files into flashcards.">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="robots" content="index, follow">
+    <title>PDF2Flashcards</title>
     {% block head %}{% endblock %}
 </head>
 
