--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -4,8 +4,8 @@
 <!-- <script src="{{ url_for('static',filename='js/index_fluff.js') }}?u={{ last_updated }}"></script> -->
 {% endblock %} {% block body %}
 <div class="center-horizontally center-inside-elems">
-    <h1>PDF to Test Questions</h1>
-    <h2>Generate questions and answers from a PDF file.</h2>
+    <h1 class="center-text">PDF to Test Questions</h1>
+    <h2 class="center-text">Generate questions and answers from a PDF file.</h2>
 </div>
 <div class="upload-area center-horizontally center-inside-elems" ondrop="dropHandler(event);"
     ondragover="dragOverHandler(event);">
