Implement export option with PDFs

--- a/backend/src/templates/results.html
+++ b/backend/src/templates/results.html
@@ -11,7 +11,7 @@
 
 <div>
     <div id="status-div">
-        <button class="button-1-disabled">Export Results</button>
+        <button class="button-1" onclick="on_export_click()">Export Results</button>
         <p class="status-text">Converting the following files, please wait...</p>
     </div>
     <div class="converting-div">
