Meta: Rename to PDF2Flashcards

--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="keywords"
         content="PDF to flashcards, convert PDF to flashcards, Q&A flashcards, PDF files, flashcard generator, study tool, educational flashcards, online flashcard maker">
-    <meta name="description" content="Effortlessly convert PDF files into flashcards.">
+    <meta name="description" content="Effortlessly convert PDF files to flashcards.">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="robots" content="index, follow">
     <title>PDF2Flashcards</title>
